--- a/MComponents/wwwroot/css/mcomponents-main.scss
+++ b/MComponents/wwwroot/css/mcomponents-main.scss
@@ -854,7 +854,7 @@
             position: sticky;
             top: 0;
             left: 0;
-            z-index: 102;
+            z-index: 45;
 
             &.m-readonly {
                 cursor: default;
